[gd_scene load_steps=57 format=3 uid="uid://ds3rde0cpcax0"]

[ext_resource type="Script" path="res://script/player.gd" id="1_kg8f6"]
[ext_resource type="Texture2D" uid="uid://bm040jw3r8n46" path="res://art/characters/player.png" id="2_c6frp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5hr52"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mmb0f"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ppxi"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3eea"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj861"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnjo"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_km5e6"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oone"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27fpc"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j03sd"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ownt"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ws36"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3sgn"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvg10"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdtnt"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e8c7"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1igi"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2aca"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op1il"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgml4"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_07mxo"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1jv3"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m6s5"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75d3l"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj7vh"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbxma"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y53st"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urxv6"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m20pu"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq5j5"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxj3w"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5862u"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urrfk"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_moc52"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdtfu"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7n40"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxrva"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_srlmm"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5lmi"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijy6a"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f4b8"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pifxv"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iii0t"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hrea"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck6m5"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8bis"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkhdj"]
atlas = ExtResource("2_c6frp")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlew3"]
atlas = ExtResource("2_c6frp")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdc8x"]
atlas = ExtResource("2_c6frp")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyx5d"]
atlas = ExtResource("2_c6frp")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5v7u"]
atlas = ExtResource("2_c6frp")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jrbi"]
atlas = ExtResource("2_c6frp")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_y16yb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmb0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ppxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3eea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj861")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km5e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oone")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27fpc")
}],
"loop": true,
"name": &"attack_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j03sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ownt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ws36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3sgn")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvg10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdtnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e8c7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1igi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2aca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op1il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgml4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07mxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1jv3")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75d3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj7vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbxma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y53st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urxv6")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m20pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq5j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxj3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5862u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urrfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moc52")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdtfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7n40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxrva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srlmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5lmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijy6a")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f4b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pifxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iii0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hrea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck6m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8bis")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkhdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlew3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdc8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyx5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5v7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jrbi")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoaae"]
size = Vector2(30, 46)

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_kg8f6")

[node name="player_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_5hr52")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_y16yb")
animation = &"walk_side"
offset = Vector2(0, -15)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(1, -15)
shape = SubResource("RectangleShape2D_aoaae")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
